--- a/styles/architect.css
+++ b/styles/architect.css
@@ -12,7 +12,15 @@
 
 /* Shared Styles */
 .btn-primary {
-  
+  border-radius: 8px;
+  background: #FF900E;
+  color: #fff;
+  padding: 20px 24px;
+  font-size: 1.25rem;
+  font-weight: 600;
+  border: 0;
+  cursor: pointer;
+  margin-top: 32px;
 }
 
 /* Header Styles */
@@ -70,4 +78,28 @@ nav {
 
 .banner-description {
   color: #727272;
+  margin-top: 14px;
+}
+
+/* Responsive Media Query */
+/* mobile devices */
+
+@media screen and (max-width:576px){
+  header {
+    padding: 20px;
+  }
+  nav {
+    flex-direction: column;
+  }
+}
+
+/* tablet or medium devices */
+@media screen and (min-width:577px) and (max-width:992px) {
+  header {
+    padding: 50px;
+  }
+
+  nav {
+    flex-direction: column;
+  };
 }
