--- a/styles/architect.css
+++ b/styles/architect.css
@@ -143,6 +143,38 @@ main {
   line-height: 1.6rem;
 }
 
+/* Facts Styles */
+
+.facts {
+  margin: 50px auto;
+}
+
+.facts-card-container {
+  display: flex;
+  justify-content: space-around;
+  margin-top: 50px;
+}
+.facts-card-container .card {
+  border-radius: 8px;
+  border: 1px solid #FF900E;
+  text-align: center;
+  padding: 30px;
+}
+
+.card-stat {
+  font-size: 2.8rem;
+  font-weight: 600;
+  color: #424242;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+.card-title {
+  font-size: 1.25rem;
+  font-weight: 600;
+  color: #727272;
+}
+
 /* Responsive Media Query */
 /* mobile devices */
 
