--- a/styles/architect.css
+++ b/styles/architect.css
@@ -143,6 +143,58 @@ main {
   line-height: 1.6rem;
 }
 
+/* Features Section */
+.feature {
+  margin-top: 100px;
+  padding: 50px;
+  display: flex;
+  gap: 30px;
+}
+
+.feature-content {
+  width: 50%;
+}
+
+.feature-content .card {
+  border-radius: 8px;
+  margin-bottom: 20px;
+  background: #FFF;
+  box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.06);
+  padding: 30px;
+}
+
+.feature-content .head {
+  border-left: 5px solid #FF900E;
+  padding-left: 20px;
+}
+
+.badge {
+  border-radius: 8px;
+  background: #FF900E;
+  text-align: center;
+  color: #FFF;
+  width: 342px;
+  padding: 40px;
+  position: relative;
+  bottom: 100px;
+  right: 100px;
+}
+
+.badge h2 {
+  font-size: 50px;
+  font-weight: 700;
+}
+
+.badge p {
+  font-size: 25px;
+  font-weight: 500;
+}
+
+.feature-image img {
+  width: 100%;
+  height: 90%;
+}
+
 /* Facts Styles */
 
 .facts {
@@ -175,6 +227,24 @@ main {
   color: #727272;
 }
 
+/* Sponsors Styles */
+.sponsors {
+  text-align: center;
+}
+
+.sponsors-img-container {
+  margin-top: 50px;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  gap: 40px;
+}
+
+.sponsors-img-container img {
+  width: 165px;
+  height: 50px;
+}
+
 /* Responsive Media Query */
 /* mobile devices */
 
@@ -182,7 +252,7 @@ main {
   header {
     padding: 20px;
   }
-  nav, .teams-container {
+  nav, .teams-container, .facts-card-container, .sponsors-img-container {
     flex-direction: column;
   }
 
@@ -194,7 +264,12 @@ main {
     padding-left: 20px;
     padding-right: 20px;
   }
+
+  .facts-card-container {
+    gap: 20px;
+  }
 }
+
 
 /* tablet or medium devices */
 @media screen and (min-width:577px) and (max-width:992px) {
@@ -202,7 +277,7 @@ main {
     padding: 50px;
   }
 
-  nav {
+  nav, .sponsors-img-container {
     flex-direction: column;
   };
 }
